--- a/html/carte.html
+++ b/html/carte.html
@@ -27,8 +27,7 @@
     <div>
         <h2>Voici la carte de la promotion Athéna. Vous pouvez y retrouvez les differentes villes des élèves ;) </h2>
 
-        <iframe src="https://www.google.com/maps/d/embed?mid=1hkrL0zVxWErIJmvI_rWAYHqD5GB850s&hl=fr&ehbc=2E312F"
-            width="1824" height="1500"></iframe>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1uJUay_k6GxVqLZZbEb-9IJf0Rqz9CIA&ehbc=2E312F" width="640" height="480"></iframe>
 
     </div>
     <div id="map"></div>
