--- a/html/carte.html
+++ b/html/carte.html
@@ -27,7 +27,7 @@
     <div>
         <h2>Voici la carte de la promotion Athéna. Vous pouvez y retrouvez les differentes villes des élèves ;) </h2>
 
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1uJUay_k6GxVqLZZbEb-9IJf0Rqz9CIA&ehbc=2E312F" width="640" height="480"></iframe>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1uJUay_k6GxVqLZZbEb-9IJf0Rqz9CIA&ehbc=2E312F" width="1380" height="1080"></iframe>
 
     </div>
     <div id="map"></div>
@@ -44,7 +44,7 @@
             <a href="https://www.reims.fr/"><img
                     src="https://www.reims.fr/fileadmin/templates/master/assets/assets_site_reims/img/logo.svg"
                     alt="region logo"></a>
-            <a href="https://www.wildcodeschool.com/"><img src="https://www.wildcodeschool.com/static/imgs/logo.png"
+      <a href="https://www.wildcodeschool.com/"><img src="https://i.ibb.co/pKNJvH2/Capture-d-cran-du-2023-08-03-14-27-49.png"
                     alt="wild logo"></a>
 
         </section>
