--- a/html/hidden palace.html
+++ b/html/hidden palace.html
@@ -96,7 +96,7 @@
             <a href="https://www.reims.fr/"><img
                     src="https://www.reims.fr/fileadmin/templates/master/assets/assets_site_reims/img/logo.svg"
                     alt="region logo"></a>
-            <a href="https://www.wildcodeschool.com/"><img src="https://www.wildcodeschool.com/static/imgs/logo.png"
+                <a href="https://www.wildcodeschool.com/"><img src="https://i.ibb.co/pKNJvH2/Capture-d-cran-du-2023-08-03-14-27-49.png"
                     alt="wild logo"></a>
 
             </section>
