--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Accueil</li></a>
-            <li><a href="html/presentation.html">Description</li></a>
-            <li><a href="html/carte.html">Carte interactive</li></a>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="html/presentation.html">Description</a></li>
+            <li><a href="html/carte.html">Carte interactive</a></li>
         </ul>
     </nav>
 
@@ -50,10 +50,9 @@
             <a href="https://www.reims.fr/"><img
                     src="https://www.reims.fr/fileadmin/templates/master/assets/assets_site_reims/img/logo.svg"
                     alt="region logo"></a>
-            <a href="https://www.wildcodeschool.com/"><img src="https://www.wildcodeschool.com/static/imgs/logo.png"
+            <a href="https://www.wildcodeschool.com/"><img src="https://i.ibb.co/pKNJvH2/Capture-d-cran-du-2023-08-03-14-27-49.png"
                     alt="wild logo"></a>
 
-        </section>
     </div>
 
     <section>
