--- a/html/carte.html
+++ b/html/carte.html
@@ -25,7 +25,7 @@
 
     <h1> Carte de la Promotion</h1>
     <div>
-        <h2>Voici la carte de la promotion Athéna. Vous pouvez y retrouvez les differentes villes des élèves ;) </h2>
+        <h2>Voici la carte de la promotion Athéna. Vous pouvez y retrouvez les differentes villes des élèves.</h2>
 
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1uJUay_k6GxVqLZZbEb-9IJf0Rqz9CIA&ehbc=2E312F" width="1380" height="1080"></iframe>
 
