--- a/html/hidden palace.html
+++ b/html/hidden palace.html
@@ -104,7 +104,7 @@
 
         <section>
             <div>
-                <p>2022-<strong>Promotion Athena@Wild Code School</strong></p>
+            <p>2022-<strong>Zeima/Elodie0530@Wild Code School</strong></p>
                 <img src="../img/logo.png" alt="logo" width="250" height="250">
             </div>
         </section>
