--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
     <section>
         <div>
-            <p>2022-<strong>Promotion Athena@Wild Code School</strong></p>
+            <p>2022-<strong>Zeima/Elodie0530@Wild Code School</strong></p>
+            <p></p>
             <img src="img/logo.png" alt="logo" width="250" height="250">
         </div>
     </section>
