--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section>
         <P>La promotion Athena est une première pour le campus Wild Code School à Reims.
             </br> Elle consiste à faire découvrir à des personnes, le monde <strong>Merveilleux</strong> du code à
-            savoir les langages de base
+            savoir les langages de base . 
             </br> soit le HTML5 afin de pouvoir crée des pages webs, le CSS afin de les mettres en formes et le
             Javascript pour les rendres intéractives.
 
