--- a/html/hidden palace.html
+++ b/html/hidden palace.html
@@ -1,114 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh mais c'est une page de Remerciements</title>
-    <a href="../index.html"><img id="at" src="../img/logo.png" alt="logo" width="300" height="300"
-            title="Merci ! Retour à l'accueil"></a>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/x-icon" href="/img/logo.png">
 </head>
-
 <body>
+    <a href="../index.html"><img id="at" src="../img/logo.png" alt="logo" width="300" height="300" title="Merci ! Retour à l'accueil"></a>
     <nav>
         <ul>
-            <li><a href="../index.html">Accueil</li></a>
-            <li><a href="presentation.html">Description</li></a>
-            <li><a href="carte.html">Carte interactive</li></a>
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="presentation.html">Description</a></li>
+            <li><a href="carte.html">Carte interactive</a></li>
         </ul>
-        <section>
-            <h1>Oh, mais ... ce sont des Remercicements ! </h1>
+    </nav>
+
+    <main style="max-width: 900px; margin: 2rem auto; background: #fff; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.07); padding: 2rem;">
+        <h1 style="text-align:center; margin-bottom:2rem;">Oh, mais ... ce sont des Remerciements !</h1>
+
+        <section style="text-align:center; margin-bottom:2rem;">
+            <p>Des MEGAS remerciements à 🐧 Nils 🐧 , pour vraiment beaucoup beaucoup de choses</p>
+            <img src="../img/penguin.png" alt="penguin" style="width:120px; margin:1rem auto; display:block;">
         </section>
 
-        <section>
-            <p> <strong> Des MEGAS remerciements à 🐧 Nils 🐧 , pour vraiment beaucoups beaucoups de choses</strong>
-            <p>
-            <div><img src="../img/penguin.png" alt="penguin"></div>
-        </section>
-
-        <section>
-            <table>
-                <p>Nous aimerions également remercier :
-
-
-                    <tr>
-                        <td><strong>Robin :</strong> Pour la réussite de cette première session, sa patience et sa
-                            disponibilité</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Adlan :</strong> Pour son calme légendaire</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Ahmed :</strong> Pour son humour</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Alexis :</strong> Pour son entrain</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Amar :</strong> Pour son expérience de formateur</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Aurélien :</strong> Toujours près à donner un coup de main</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Christophe :</strong> Pour son attention</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Célia :</strong> Pour son attitude de fonceuse</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Elisa :</strong> Pour sa sympathie</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Enzo :</strong> Pour sa bonne humeur sportive</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Nadège :</strong> Pour sa gentilesse</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Rina :</strong> Pour son accent chantant</td>
-                    </tr>
-                    <tr>
-                        <td><strong>Samir :</strong> Pour ses retours d'expériences personnel</td>
-                    </tr><!--afin de ne pas dire qu'il parle de trop-->
-                </p>
+        <section style="margin-bottom:2rem;">
+            <h2 style="text-align:center; margin-bottom:1rem;">Nous aimerions également remercier :</h2>
+            <table style="margin:0 auto; border-collapse:separate; border-spacing:0 0.5rem;">
+                <tbody>
+                    <tr><td><strong>Robin :</strong> Pour la réussite de cette première session, sa patience et sa disponibilité</td></tr>
+                    <tr><td><strong>Adlan :</strong> Pour son calme légendaire</td></tr>
+                    <tr><td><strong>Ahmed :</strong> Pour son humour</td></tr>
+                    <tr><td><strong>Alexis :</strong> Pour son entrain</td></tr>
+                    <tr><td><strong>Amar :</strong> Pour son expérience de formateur</td></tr>
+                    <tr><td><strong>Aurélien :</strong> Toujours prêt à donner un coup de main</td></tr>
+                    <tr><td><strong>Christophe :</strong> Pour son attention</td></tr>
+                    <tr><td><strong>Célia :</strong> Pour son attitude de fonceuse</td></tr>
+                    <tr><td><strong>Elisa :</strong> Pour sa sympathie</td></tr>
+                    <tr><td><strong>Enzo :</strong> Pour sa bonne humeur sportive</td></tr>
+                    <tr><td><strong>Nadège :</strong> Pour sa gentillesse</td></tr>
+                    <tr><td><strong>Rina :</strong> Pour son accent chantant</td></tr>
+                    <tr><td><strong>Samir :</strong> Pour ses retours d'expériences personnels</td></tr>
+                    <tr><td><strong>Elodie :</strong> Pour ses idees, son entrain et sa bonne humeur</td></tr>
+                </tbody>
             </table>
         </section>
-        <div>
-            <img class="equipe" src="../img/equipe.jpg" alt="equipe" ">
-        </div>
-        <p> Merci à tous pour l'entraide et la bienveillance dont vous avez fait preuve ainsi que la super ambiance
-            durant 3 semaines </p>
+
+        <section style="text-align:center; margin-bottom:2rem;">
+            <p>Merci à tous pour l'entraide et la bienveillance dont vous avez fait preuve ainsi que la super ambiance durant 3 semaines.</p>
             <em>Site fait par Elodie Jehl et Maximilien Thiry</em>
-</body>
+        </section> 
+    <div style="text-align:center; margin:2rem 0;">
+    <button id="revealSecret" style="background:#e6007e; color:#fff; border:none; border-radius:8px; padding:0.5rem 1.2rem; font-family:'Poppins',sans-serif; font-size:1rem; cursor:pointer;">
+        👀 Voir le message secret
+    </button>
+    <div id="secretMessage" style="display:none; margin-top:1rem; color:#003057; font-size:1.05rem;">
+        <strong>Note du futur :</strong><br>
+        <p>Bonjour, c’est Maximilien du futur. J’espère que tout le monde va bien et que chacun a pu avancer vers ses rêves. Même si la vie n’est pas toujours simple, continuez à croire en vous et à vous battre pour ce qui vous anime.
+        Les chemins se séparent parfois, et il arrive que certaines amitiés prennent un peu de… « froid » (petit clin d’œil à qui se reconnaîtra 😄). Mais c’est la vie : l’important, c’est de garder de beaux souvenirs, de rester fier de son parcours et d’avancer avec le sourire.
+        Profitez des petits plaisirs, codez avec passion, et gardez toujours l’envie d’apprendre.
+        Prenez soin de vous, et bonne route à chacun !
+        ❄️ Même dans le froid, il y a toujours une place pour un sourire et un souvenir partagé. 😉<br>
+        Tchusss</p>
+    </div>
+</div>
+<script>
+document.getElementById('revealSecret').onclick = function() {
+    document.getElementById('secretMessage').style.display = 'block';
+    this.style.display = 'none';
+};
+</script>
+    </main>
 
+  
 
-<footer>
-    <div>
-        <br>
-        <br>
-        <section>
-            <a href=" https://www.grandest.fr/"><img
-                src="https://www.leforumdd.fr/uploads/images/partenaires/2022/RGE%20RVB.png" alt="region logo"></a>
-            <a href="https://www.reims.fr/"><img
-                    src="https://www.reims.fr/fileadmin/templates/master/assets/assets_site_reims/img/logo.svg"
-                    alt="region logo"></a>
-                <a href="https://www.wildcodeschool.com/"><img src="https://i.ibb.co/pKNJvH2/Capture-d-cran-du-2023-08-03-14-27-49.png"
-                    alt="wild logo"></a>
-
-            </section>
-        </div>
-
-        <section>
-            <div>
-            <p>2022-<strong>Zeima/Elodie0530@Wild Code School</strong></p>
-                <img src="../img/logo.png" alt="logo" width="250" height="250">
+    <footer>
+        <section class="partners">
+           
+            <div class="partner-logos">
+                <a href="https://www.grandest.fr/"><img src="https://www.leforumdd.fr/uploads/images/partenaires/2022/RGE%20RVB.png" alt="Région Grand Est"></a>
+                <a href="https://www.reims.fr/"><img src="../img/logo.svg" alt="Ville de Reims"></a>
+                <a href="https://www.wildcodeschool.com/"><img src="../img/logo-wcs.svg" alt="Wild Code School"></a>
             </div>
         </section>
-
-        </footer>
-
+        <section class="copyright">
+            <div class="copyright-content">
+                <p>&copy; 2022 - <strong>Zeima/Elodie0530@Wild Code School</strong></p>
+                <img src="../img/logo-w.png" alt="Logo Athena" width="100" height="100">
+            </div>
+        </section>
+    </footer>
+</body>
 </html>
