--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena Promotion Wild Code School Reims</title>
-    <a href="./html/hidden palace.html"><img id="at" src="img/logo.png" alt="logo" width="300" height="300"
-            title="Clique par ici"></a>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <a href="html/hidden palace.html"><img id="at" src="img/logo.png" alt="logo" width="300" height="300" title="Clique par ici"></a>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="/img/logo.png">
 </head>
@@ -41,28 +43,23 @@
 </body>
 
 <footer>
-    <div>
-        <br>
-        <br>
-        <section>
+    <section class="partners">
+        <div class="partner-logos">
             <a href="https://www.grandest.fr/"><img
-                    src="https://www.leforumdd.fr/uploads/images/partenaires/2022/RGE%20RVB.png" alt="region logo"></a>
+                    src="https://www.leforumdd.fr/uploads/images/partenaires/2022/RGE%20RVB.png" alt="Région Grand Est"></a>
             <a href="https://www.reims.fr/"><img
-                    src="https://www.reims.fr/fileadmin/templates/master/assets/assets_site_reims/img/logo.svg"
-                    alt="region logo"></a>
-            <a href="https://www.wildcodeschool.com/"><img src="https://i.ibb.co/pKNJvH2/Capture-d-cran-du-2023-08-03-14-27-49.png"
-                    alt="wild logo"></a>
-
-    </div>
-
-    <section>
-        <div>
-            <p>2022-<strong>Zeima/Elodie0530@Wild Code School</strong></p>
-            <p></p>
-            <img src="img/logo.png" alt="logo" width="250" height="250">
+                    src="img/logo.svg" alt="Ville de Reims"></a>
+            <a href="https://www.wildcodeschool.com/"><img src="img/logo-wcs.svg"
+                    alt="Wild Code School"></a>
         </div>
     </section>
 
+    <section class="copyright">
+        <div class="copyright-content">
+            <p>&copy; 2022 - <strong>Zeima/Elodie0530@Wild Code School</strong></p>
+            <img src="img/logo-w.png" alt="Logo Athena" width="150" height="150">
+        </div>
+    </section>
 </footer>
 
 </html>
