--- a/html/presentation.html
+++ b/html/presentation.html
@@ -1,62 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>presentation</title>
+    <title>Présentation - Athena Promotion Wild Code School Reims</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/cards.css">
-    <a href="./hidden palace.html"><img id="at" src="../img/logo.png" alt="logo" width="300" height="300"
-            title="Clique par ici"></a>
     <link rel="icon" type="image/x-icon" href="/img/logo.png">
 </head>
-
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Accueil</li></a>
-                <li><a href="presentation.html">Description</li></a>
-                <li><a href="carte.html">Carte interactive</li></a>
-            </ul>
-        </nav>
-    </header>
-    <h2>Formateur de la promotion Athéna</h2>
-
-    <div class="cards" id="cardListf"></div>
-
-    <h2>Description de la promotion Athéna</h2>
-
-    <div class="cards" id="cardList"></div>
-    <script src="../js/index.js"></script>
-
-</body>
-
-<footer>
-    <div>
-        <br>
-        <br>
-        <section>
-            <a href="https://www.grandest.fr/"><img
-                    src="https://www.leforumdd.fr/uploads/images/partenaires/2022/RGE%20RVB.png" alt="region logo"></a>
-            <a href="https://www.reims.fr/"><img
-                    src="https://www.reims.fr/fileadmin/templates/master/assets/assets_site_reims/img/logo.svg"
-                    alt="region logo"></a>
-                  <a href="https://www.wildcodeschool.com/"><img src="https://i.ibb.co/pKNJvH2/Capture-d-cran-du-2023-08-03-14-27-49.png"
-                    alt="wild logo"></a>
-
-        </section>
-    </div>
+    <a href="./hidden palace.html"><img id="at" src="../img/logo.png" alt="logo" width="300" height="300" title="Clique par ici"></a>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="presentation.html">Description</a></li>
+            <li><a href="carte.html">Carte interactive</a></li>
+        </ul>
+    </nav>
 
     <section>
-        <div>
-            <p>2022-<strong>Zeima/Elodie0530@Wild Code School</strong></p>
-            <img src="../img/logo.png" alt="logo" width="250" height="250">
-        </div>
+        <h2>Formateur de la promotion Athéna</h2>
+        <div class="cards" id="cardListf"></div>
     </section>
 
-</footer>
+    <section>
+        <h2>Description de la promotion Athéna</h2>
+        <div class="cards" id="cardList"></div>
+    </section>
 
+    <footer>
+        <section class="partners">
+            <h3>Nos partenaires</h3>
+            <div class="partner-logos">
+                <a href="https://www.grandest.fr/"><img src="https://www.leforumdd.fr/uploads/images/partenaires/2022/RGE%20RVB.png" alt="Région Grand Est"></a>
+                <a href="https://www.reims.fr/"><img src="../img/logo.svg" alt="Ville de Reims"></a>
+                <a href="https://www.wildcodeschool.com/"><img src="../img/logo-wcs.svg" alt="Wild Code School"></a>
+            </div>
+        </section>
+        <section class="copyright">
+            <div class="copyright-content">
+                <p>&copy; 2022 - <strong>Zeima/Elodie0530@Wild Code School</strong></p>
+                <img src="../img/logo-w.png" alt="Logo Athena" width="100" height="100">
+            </div>
+        </section>
+    </footer>
+    <script src="../js/index.js"></script>
+</body>
 </html>
